--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.2",
     "react-scroll": "^1.9.3",
+    "sass": "^1.95.1",
     "tailwindcss": "^4.1.10"
   },
   "devDependencies": {
